syntax = "proto3";

package destroyer;

import "google/api/annotations.proto";
import "google/api/http.proto";
import "google/protobuf/timestamp.proto";

 option go_package = "github.com/franklynobleC/microserviceTask/grpcServiceA/destroyerService";


  service  DestroyerService{
    rpc AcquireTarget(DestroyerRequest)returns ( DestroyerResponse) { 
      option (google.api.http) = {
        post:"/v1/Destroyer/destroyer" 
        body: "*"
        
      };
    
    }

     rpc ListAllTargets(AllTargetReqest) returns (AllTargetResponse) {
      option (google.api.http) =  {
      get: "/v1/Destroyer/alltarget"
      
     };
    }

    rpc GetSingleTarget(GetSingleTargetRequest)returns (GetSingleTargetResponse){
       option (google.api.http) = {
         get:"/v1/Destroyer/singletarget/{target}"
    };

  }
}

        
    message GetSingleTargetRequest{
      string id = 1;
    }


    message GetSingleTargetResponse{
        string id = 2 ;      
        string message = 4;
        string created_on = 5;
        string updated_on = 7;
    }
     

     message  AllTargetReqest{}

     message AllTargetResponse{
      string  id = 4;
      string targetname = 1;
     repeated Data datas = 2;
     string created_on =  3;
     }
  

     message Data {
        string id = 2 ;      
        string message = 4;
        string created_on = 5;
        string updated_on = 7;
     }
  

  message DestroyerRequest{    
           string message = 3;
       }  
  
   message Datas2 {
       string id = 2 ;      
        string message = 4;
      
    }


   message DestroyerResponse{
       string id = 2 ;      
        string message = 4;
        string created_on = 5;
        string updated_on = 7;
        // google.protobuf.Timestamp created_on = 5;
        //  google.protobuf.Timestamp updated_on = 3;
     
      // repeated Datas2 datas = 2;
      // google.protobuf.Timestamp created_on = 5;
   }



